:star: ajuste codigos e workflow limpo

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -1,9 +1,9 @@
-name: "PROD deploy"
+name: "[PROD] deploy"
 
 on: 
   push:
     branches:
-      - main
+      - master
 
 permissions:
   id-token: write
