--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,8 +23,8 @@ on:
         required: true
       destroy:
         type: boolean
-        required: false
-        default: false
+        required: true
+        default: true
         description: "Define se o comando 'terraform destroy' deve ser executado (true para destruir, false para plan/apply)"
 
 jobs:
