:bomb: destroy true

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,7 +23,7 @@ on:
         required: true
       destroy:
         type: boolean
-        required: true
+        required: false
         default: true
         description: "Define se o comando 'terraform destroy' deve ser executado (true para destruir, false para plan/apply)"
 
