:bomb: destroy true2

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -69,7 +69,7 @@ jobs:
         id: terraform-destroy
         run: |
           cd infra && \
-          terraform workspace select -or-create ${{ inputs.environment }} && \ 
+          terraform workspace select ${{ inputs.environment }} && \ 
           terraform destroy \
             -var="environment=${{ inputs.environment }}" \
             -var-file="envs/${{ inputs.environment }}/terraform.tfvars" \ 
