:star: reinicia tf

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -24,7 +24,7 @@ on:
       destroy:
         type: boolean
         required: false
-        default: true
+        default: false
         description: "Define se o comando 'terraform destroy' deve ser executado (true para destruir, false para plan/apply)"
 
 jobs:
